examples/test/testpolicy5624.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5624
  namespace: namespace154
spec:
  podSelector:
    matchLabels:
      key32: value39
      key8: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value49
          key48: value30
          key20: value28
      podSelector:
        matchLabels:
          key5: value37
          key34: value7
